# llama.cpp

./: CMakeLists.txt
arch/: CMakeLists.txt  arch-util.h
arch/gptneox/: CMakeLists.txt  common-gptneox.cpp  common-gptneox.h  gptneox-quantize.cpp  gptneox-tokenize.cpp  gptneox-update.cpp  gptneox.cpp  gptneox.h  main-gptneox.cpp
